--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@emotion/react": "latest",
     "@emotion/server": "latest",
     "@emotion/styled": "latest",
+    "@importantimport/material-color-utilities": "^0.2.0",
     "@mui/icons-material": "latest",
     "@mui/material": "latest",
     "next": "latest",
